@@ -65,12 +65,13 @@ values for the suffix, just make sure it matches
 <b>RECIPIENT_DELIMITER</b> in your <b>tmdarc</b>.
 <br><br>
 
-Add the following two lines to both the <b>userforward</b> and 
+Add the following lines to both the <b>userforward</b> and 
 the <b>localuser</b> directors if they are not there already:
 <br><br>
 
 <blockquote><pre>
-suffix = -*     # or "+*" if you prefer "user+suffix" addresses
+suffix = -*
+# or "+*" if you prefer "user+suffix" addresses
 suffix_optional
 </blockquote></pre>
 
