@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu Feb 28 09:46:04 2002 -->
+<!-- Tue Apr 23 15:24:49 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -215,12 +215,13 @@ values for the suffix, just make sure it matches
 <b>RECIPIENT_DELIMITER</b> in your <b>tmdarc</b>.
 <br><br>
 
-Add the following two lines to both the <b>userforward</b> and 
+Add the following lines to both the <b>userforward</b> and 
 the <b>localuser</b> directors if they are not there already:
 <br><br>
 
 <blockquote><pre>
-suffix = -*     # or "+*" if you prefer "user+suffix" addresses
+suffix = -*
+# or "+*" if you prefer "user+suffix" addresses
 suffix_optional
 </blockquote></pre>
 
