@@ -1,3 +1,8 @@
+2002-04-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* config-pre.ht (suffix): Exim comments should be on their own
+	line.
+	
 2002-04-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* inuse.ht (Links): Link to Mintersoft's VisualMail and NightSky
